improved the quality of photos and separated projects

--- a/main_path/templates/main_path/contacts.html
+++ b/main_path/templates/main_path/contacts.html
@@ -47,17 +47,9 @@
             <div class="header_top_area">
                 <div class="container">
                     <div class="pull-left">
-                        <a href="#"><i class="fa fa-phone"></i>(012) - 3456789</a>
-                        <a href="#"><i class="fa fa-map-marker"></i>1234 Cafficic, California</a>
-                        <a href="#"><i class="mdi mdi-clock"></i>08 AM - 10 PM</a>
-                    </div>
-                    <div class="pull-right">
-                        <ul class="header_social">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                        </ul>
+                        <a><i class="fa fa-phone"></i>+7 987 273 73 83</a>
+                        <a><i class="fa fa-map-marker"></i>423602, Татарстан, Елабуга, Проспект мира 30, кв. 139</a>
+                        <a><i class="mdi mdi-clock"></i>8:00 - 19:00</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +78,7 @@
                                 </li>
                                 <li>
                                     <a href="{% url 'services'%}">Услуги</a></li>
-                                <li><a href="">О нас</a></li>
+                                <li><a href="{% url 'about'%}">О нас</a></li>
 <!--                                <li><a href="blog-details.html">blog</a></li>-->
                                 <li class="dropdown submenu active"><a href="{% url 'contacts'%}">Контакты</a></li>
 <!--                                <li class="icon_search"><a href="#"><i class="mdi mdi-cart"></i></a></li>-->
