--- a/main_path/templates/main_path/About us.html
+++ b/main_path/templates/main_path/About us.html
@@ -1,10 +1,310 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-</body>
+        <link rel="icon" href="{% static 'img/icon-TehStroy.png'%}" type="image/x-icon" />
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <title>О нас</title>
+
+        <!-- Icon css link -->
+        <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/materialdesignicons.min.css' %}" rel="stylesheet">
+
+        <!-- Bootstrap -->
+        <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
+
+        <!-- Rev slider css -->
+        <link href="{% static 'vendors/revolution/css/settings.css' %}" rel="stylesheet">
+        <link href="{% static 'vendors/revolution/css/layers.css' %}" rel="stylesheet">
+        <link href="{% static 'vendors/revolution/css/navigation.css'%}" rel="stylesheet">
+        <link href="{% static 'vendors/animate-css/animate.css'%}" rel="stylesheet">
+        <link href="{% static 'vendors/owl-carousel/assets/owl.carousel.min.css'%}" rel="stylesheet">
+        <link href="{% static 'vendors/flex-slider/flexslider.css'%}" rel="stylesheet">
+        <link href="{% static 'vendors/magnific-popup/magnific-popup.css'%}" rel="stylesheet">
+
+        <!-- Extra plugin css -->
+        <link href="{% static 'css/style.css'%}" rel="stylesheet">
+        <link href="{% static 'css/style_contacts.css'%}" rel="stylesheet">
+        <link href="{% static 'css/contacts_adaptive.css'%}" rel="stylesheet">
+        <link href="{% static 'css/responsive.css'%}" rel="stylesheet">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+
+
+        <!--================Header Area =================-->
+        <header class="main_header_area">
+            <div class="header_top_area">
+                <div class="container">
+                    <div class="pull-left">
+                        <a><i class="fa fa-phone"></i>+7 987 273 73 83</a>
+                        <a><i class="fa fa-map-marker"></i>423602, Татарстан, Елабуга, Проспект мира 30, кв. 139</a>
+                        <a><i class="mdi mdi-clock"></i>8:00 - 19:00</a>
+                    </div>
+                </div>
+            </div>
+            <div class="main_menu_area">
+                <div class="container">
+                    <nav class="navbar navbar-default">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="#"><img src="{% static 'img/logo-TehStroy (3).png'%}" alt=""></a>
+                        </div>
+
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li>
+                                    <a href="{% url 'index'%}">Главная</a>
+                                </li>
+                                <li >
+                                    <a href="{% url 'projects'%}">Проекты</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'services'%}">Услуги</a></li>
+                                <li  class="dropdown submenu active"><a href="{% url 'about'%}">О нас</a></li>
+<!--                                <li><a href="blog-details.html">blog</a></li>-->
+                                <li><a href="{% url 'contacts'%}">Контакты</a></li>
+<!--                                <li class="icon_search"><a href="#"><i class="mdi mdi-cart"></i></a></li>-->
+                            </ul>
+                        </div><!-- /.navbar-collapse -->
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <!--================Header Area =================-->
+
+        <!--================Banner Area =================-->
+
+        <!--================End Our Latest Project Area =================-->
+<div class="content_bg">
+<div class="wrap">
+<div class="wrapper">
+<div class="main">
+	 	<h2>About us</h2>
+		<div class="about">
+			 <div class="cont-grid-img img_style">
+	     		<a href="details.html"><img src="images/about_pic.jpg" alt=""></a>
+	     	</div>
+	       <div class="cont-grid">
+	       <div class="abt-para">
+	       	<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+	       	<p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry., Lorem Ipsum  dummy text ever since dummy text of the printing and usings 1500s,Duis aute irure dolor in reprehenderit in voluptate velit esse when an,Lorem Ipsum has been the industry's standard dummy text ever since dummy text of the printing and usings 1500s, </p>
+	       	<p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+			<div class="read_more">
+				 <a class="btn" href="details.html">read more</a>
+			</div>
+	       	</div>
+	      	 <div class="clear"></div>
+	      	</div>
+	      	<div class="clear"></div>
+	    	<div class="about-p">
+		    	<p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry., Lorem Ipsum  dummy text ever since dummy text of the printing and usings 1500s,Duis aute irure dolor in reprehenderit in voluptate velit esse when an,Lorem Ipsum has been the industry's standard dummy text ever since dummy text of the printing and usings 1500s, </p>
+				<p class="para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since dummy text of the printing and usings 1500s,Duis aute irure dolor in reprehenderit in voluptate velit Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since dummy text of the printing and usings 1500s,Duis aute irure dolor in reprehenderit in voluptate velit</p>
+				<p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+				<div class="read_more">
+					<a class="btn" href="details.html">read more</a>
+				</div>
+		</div>
+		</div>
+		<div class="clear"></div>
+	</div>
+
+</div>
+</div>
+</div>
+<!-- start footer -->
+<div class="footer_bg">
+<div class="wrap">
+<div class="wrapper">
+<div class="footer">
+	<div class="section group">
+		<div class="col_1_of_3 span_1_of_3">
+			<h3>Testimonials</h3>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+		</div>
+		<div class="col_1_of_3 span_1_of_3">
+			<h3>Information</h3>
+			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Interne.</p>
+		</div>
+		<div class="col_1_of_3 span_1_of_3">
+			<h3>Contact Us</h3>
+			<ul class="f_nav">
+				<li>Lorem Ipsum available,</li>
+				<li>22-56-2-9 Sit Amet, Lorem,</li>
+				<li>There are many variations,</li>
+				<li>USA</li>
+				<li>fax:(00) 000 000 000 </li>
+				<li>Phone:(00) 222 666 444 </li>
+				<li>Email:<a href=""> <span><a href="mailto:info@example.com">mail@example.com</a></span></a></li>
+			</ul>
+		</div>
+		<div class="clear"></div>
+	</div>
+</div>
+</div>
+</div>
+</div>
+
+        <!--================End Get Quote Area =================-->
+
+        <!--================Footer Area =================-->
+        <footer class="footer_area">
+            <div class="footer_widgets_area footer_bg">
+                <div class="container">
+                    <div class="row footer_widgets_inner">
+                        <div class="col-md-3 col-sm-6">
+                            <aside class="f_widget about_widget">
+                                <img src="{% static 'img/logo-TehStroy (3).png'%}" alt="">
+                                <p>Мы строим дома с любовью и профессионализмом, чтобы ваша мечта об идеальном жилье стала реальностью. Мы - надежный партнер в реализации вашего строительного проекта.</p>
+<!--                                <ul>-->
+<!--                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+<!--                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+<!--                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
+<!--                                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
+<!--                                </ul>-->
+                            </aside>
+                        </div>
+<!--                        <div class="col-md-3 col-sm-6">-->
+<!--                            <aside class="f_widget recent_widget">-->
+<!--                                <div class="f_w_title">-->
+<!--                                    <h3>Recent Posts</h3>-->
+<!--                                </div>-->
+<!--                                <div class="recent_w_inner">-->
+<!--                                    <div class="media">-->
+<!--                                        <div class="media-left">-->
+<!--                                            <img src="{% static 'img/blog/recent-post/recent-1.png'%}" alt="">-->
+<!--                                        </div>-->
+<!--                                        <div class="media-body">-->
+<!--                                            <a href="#"><p>The road to success is always under con-struction</p></a>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    <div class="media">-->
+<!--                                        <div class="media-left">-->
+<!--                                            <img src="{% static 'img/blog/recent-post/recent-2.png'%}" alt="">-->
+<!--                                        </div>-->
+<!--                                        <div class="media-body">-->
+<!--                                            <a href="#"><p>The road to success is always under con-struction</p></a>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </aside>-->
+<!--                        </div>-->
+                        <div class="col-md-3 col-sm-6">
+                            <aside class="f_widget address_widget">
+                                <div class="f_w_title">
+                                    <h3>Адрес офиса</h3>
+                                </div>
+                                <div class="address_w_inner">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <i class="fa fa-map-marker"></i>
+                                        </div>
+                                        <div class="media-body">
+                                            <p>423602, Татарстан, Елабуга, Проспект мира 30, кв. 139</p>
+                                        </div>
+                                    </div>
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <i class="fa fa-phone"></i>
+                                        </div>
+                                        <div class="media-body">
+                                            <p>+7 987 273 73 83 </p>
+                                            <p>+7 927 486 49 55 </p>
+                                        </div>
+                                    </div>
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <i class="fa fa-envelope"></i>
+                                        </div>
+                                        <div class="media-body">
+                                            <p>info@tehstroy.com.ru</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </aside>
+                        </div>
+<!--                        <div class="col-md-3 col-sm-6">-->
+<!--                            <aside class="f_widget give_us_widget">-->
+<!--                                <h5>Give Us A Call</h5>-->
+<!--                                <h4>(012) 3456789</h4>-->
+<!--                                <h5>or</h5>-->
+<!--                                <a class="get_bg_btn" href="#">GET A QUOTE</a>-->
+<!--                            </aside>-->
+<!--                        </div>-->
+                    </div>
+                </div>
+            </div>
+<!--            <div class="footer_copy_right">-->
+<!--                <div class="container">-->
+<!--                    <div class="copy_right_inner">-->
+<!--                    	<div class="pull-left">-->
+<!--                    		<h4>&lt;!&ndash; Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. &ndash;&gt;-->
+<!--&lt;!&ndash;Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>&ndash;&gt;-->
+<!--&lt;!&ndash; Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. &ndash;&gt;</h4>-->
+<!--                    	</div>-->
+<!--                    	<div class="pull-right">-->
+<!--                    		<ul class="footer_menu">-->
+<!--                    			<li class="active"><a href="">Home</a></li>-->
+<!--                    			<li><a href="">Terms of Use</a></li>-->
+<!--                    			<li><a href="">Disclaimer</a></li>-->
+<!--                    			<li><a href="">Contact Us</a></li>-->
+<!--                    		</ul>-->
+<!--                    	</div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+        </footer>
+        <!--================End Footer Area =================-->
+
+
+
+
+
+
+
+
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="{% static 'js/jquery-2.2.4.js'%}"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="{% static 'js/bootstrap.min.js'%}"></script>
+        <!-- Rev slider js -->
+        <script src="{% static 'vendors/revolution/js/jquery.themepunch.tools.min.js'%}"></script>
+        <script src="{% static 'vendors/revolution/js/jquery.themepunch.revolution.min.js'%}"></script>
+        <script src="{% static 'vendors/revolution/js/extensions/revolution.extension.video.min.js'%}"></script>
+        <script src="{% static 'vendors/revolution/js/extensions/revolution.extension.slideanims.min.js'%}"></script>
+        <script src="{% static 'vendors/revolution/js/extensions/revolution.extension.layeranimation.min.js'%}"></script>
+        <script src="{% static 'vendors/revolution/js/extensions/revolution.extension.navigation.min.js'%}"></script>
+
+        <script src="{% static 'vendors/owl-carousel/owl.carousel.min.js'%}"></script>
+        <script src="{% static 'vendors/isotope/imagesloaded.pkgd.min.js'%}"></script>
+        <script src="{% static 'vendors/isotope/isotope.pkgd.min.js'%}"></script>
+        <script src="{% static 'vendors/magnific-popup/jquery.magnific-popup.min.js'%}"></script>
+        <script src="{% static 'vendors/counterup/waypoints.min.js'%}"></script>
+        <script src="{% static 'vendors/counterup/jquery.counterup.min.js'%}"></script>
+        <script src="{% static 'vendors/flex-slider/jquery.flexslider-min.js'%}"></script>
+
+        <!--gmaps Js-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+        <script src="{% static 'js/gmaps.min.js'%}"></script>
+
+        <script src="{% static 'js/theme.js'%}"></script>
+    </body>
 </html>
